# ChromaCapture

./: README.md  custom.d.ts  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: color_commands.rs  commands.rs  data.rs  hex_colors.rs  mod.rs
src/components/: HeaderColor.tsx  MainColors.tsx
src/styles/: colors.ts
